# floodpulse-nairobi

./: .gitignore  README.md  pyproject.toml
docs/: PRD.md  schema.sql
levels/level_0/: README.md  create_identity.py  customize.py  generator.py  level_0_Identity.md
levels/level_1/: README.md  static_mapper.py  vision_mcp.py
levels/level_2/: README.md  weather_service.py
levels/level_3/: README.md  schema.sql  seed_data.py  spanner_init.py
notebooks/: README.md
prompts/: mbagathi_vision_v1.json  mbagathi_vision_v1.md
src/: README.md
